<resources>
    <string name="app_name">SqlLogin</string>

    <string name="hint_names">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_menber">No account yet? Create one</string>
    <string name="text_Already_menber">Already a menber? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_math">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
<string name="text_menber">Already a sesber? Login</string>

</resources>
