<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="activities.LoginActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo1"/>


            <android.support.design.widget.TextInputLayout

                android:id="@+id/TextInputLayoutEmail"
                android:layout_width="match_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/TextInputEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/colortext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colortext">
                </android.support.design.widget.TextInputEditText>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/TextInputLayoutPassword"
                android:layout_width="match_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/TextInputEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/colortext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colortext">
                </android.support.design.widget.TextInputEditText>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/colortext"
                android:background="@color/colorTextHint"
                android:text="@string/text_login"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_not_menber"
                android:textSize="16sp"
                android:textColor="@color/colortext"/>










        </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
